Fix SharedSampler to cope correctly with zero-thread processes.

SharedSampler previously assumed that all processes have at least one
thread, which appears no longer to be the case for the Windows operating
system's "System and Compressed Memory" process.

BUG=673175

Review-Url: https://codereview.chromium.org/2566423002
Cr-Commit-Position: refs/heads/master@{#438322}

Former-commit-id: 8c4cfd4e82b4465305d60d3830bcbae50076f004